<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml>
<project xmlns="https://maven.apache.org/POM/4.0.0"
	xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.17</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>it.eng.dome</groupId>
	<artifactId>search</artifactId>
	<version>1.1.4</version>
	<name>Search and Browsing</name>
	<description>Demo for DOME Project</description>

	<properties>
		<java.version>11</java.version>
		<skipTests>true</skipTests>
	</properties>

	<dependencies>
		<!-- Spring Boot Starters -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>org.springframework.boot</groupId> -->
		<!-- <artifactId>spring-boot-starter-security</artifactId> -->
		<!-- </dependency> -->

		<!-- Swagger / Springfox -->
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-boot-starter</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>3.0.0</version>
		</dependency>

		<!-- Jsoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.18.1</version>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>			
			<scope>provided</scope>
		</dependency>

		<!-- Brokerage Utils dependencies -->
		<dependency>
			<groupId>it.eng.dome.brokerage</groupId>
			<artifactId>brokerage-utils</artifactId>
			<version>2.2.7</version>
		</dependency>

		<!-- TMF SDK dependencies -->
		<!-- TMF620 Catalog -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf620-v4</artifactId>
			<version>2.1.3</version>
		</dependency>

		<!-- TMF632 Party Management -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf632-v4</artifactId>
			<version>2.1.2</version>
		</dependency>

		<!--  TMF633 Sercvice Catalog Management  -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf633-v4</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!--  TMF634 Resource Catalog  -->
		<dependency>
			<groupId>it.eng.dome.tmforum-sdk</groupId>
			<artifactId>tmf634-v4</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!-- Nimbus JOSE + JWT -->
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>9.37.3</version>
		</dependency>

		<!-- JSON Parsing con Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.15.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.15.2</version>
		</dependency>


	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>build-info</id>
						<goals>
							<goal>build-info</goal>
						</goals>
						<configuration>
							<additionalProperties>
								<version>${project.version}</version>
							</additionalProperties>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<jvmArguments>--add-opens java.base/java.net=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
	    <profile>
	        <id>generate-rest-apis</id>
	        <activation>
	            <activeByDefault>false</activeByDefault>
	        </activation>
	        <properties>
	            <spring-boot.run.arguments>--rest_api_docs.generate_md=true</spring-boot.run.arguments>
	        </properties>
	    </profile>
	</profiles>

</project>